# casino-reg-ie

./: .env.example  .prettierignore  README.md  package-lock.json  pyproject.toml  requirements-dev.txt  requirements.txt  setup-dev.bash
.github/workflows/: python-app.yml
src/be/: db.py
src/be/model/: models.py
src/casino_reg_ie/: main.py
src/casino_reg_ie/core/: logging.py
src/casino_reg_ie/model/: models.py
src/fe/cli/: main.py
src/regulate_ie/: db.py  main.py
src/regulate_ie/core/: logging.py
src/regulate_ie/model/: models.py
tests/: api_test.py  test_api.py
